<resources>
    <string name="app_name">MathPP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_question">Ask Question</string>
    <string name="action_search">Search</string>

    <string name="not_available_yet">Not available Yet</string>

    <string name="build_version" translatable="false">Build %1$s</string>

    <string name="nav_categories">Categories</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">Info</string>
    <string name="nav_exit">Exit</string>

    <string name="search_hint">Search Questions…</string>

    <string name="no_internet_connection">No internet connection!</string>
    <string name="unable_retrieve_categories">Unable to retrieve categories from server.</string>
    <string name="unable_retrieve_questions">Unable to retrieve questions from server.</string>
    <string name="unable_retrieve_answers">Unable to retrieve answers from server.</string>

    <string name="category_image">Category image</string>
    <string name="no_categories_available">No categories available</string>
    <string name="loading_categories">Loading categories…</string>

    <string name="no_questions_available">There are no questions yet</string>
    <string name="loading_questions">Loading questions…</string>

    <string name="no_answers_available">There are no answers yet</string>
    <string name="loading_answers">Loading answers…</string>

    <string name="user_asked">%1$s ask:</string>
    <string name="user_responded">%1$s responds:</string>

    <string name="question_hidden">Question hidden</string>
    <string name="undo">Undo</string>

    <string name="placeholder_username" translatable="false">Emílio B. Pedrollo</string>
    <string name="placeholder_email" translatable="false">abcname@email.com</string>

    <string name="title_activity_question">QuestionActivity</string>
    <string name="icon_student">Student Icon</string>
    <string name="icon_monitor">Monitor Icon</string>
    <string name="icon_teacher">Teacher Icon</string>
    <string name="star">Star</string>
    <string name="filled_star">Filled star</string>

    <string name="thumbs_up">Thumbs Up</string>
    <string name="thumbs_down">Thumbs Down</string>

    <string name="lipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lobortis, sapien pulvinar luctus fermentum, justo eros ultricies lorem, efficitur tempor sapien turpis in ipsum. Integer interdum augue id tortor molestie suscipit. Ut viverra imperdiet tellus, vel aliquam augue congue ut. Sed vitae pellentesque dolor, a semper lacus. Aenean aliquet, massa ut malesuada vestibulum, dolor odio vestibulum sapien, in suscipit turpis arcu at nisi. Duis maximus luctus lectus tincidunt tempus. Suspendisse interdum arcu at aliquam varius.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="prefs_default_value_display_name" translatable="false">John Smith</string>

    <string name="pref_title_user_email">Email</string>
    <string name="prefs_default_value_email" translatable="false">example@domain.com</string>

    <string name="pref_title_user_type">User Category</string>
    <string-array name="prefs_entries_user_type">
        <item>Student</item>
        <item>Monitor</item>
        <item>Teacher</item>
    </string-array>
    <string-array name="prefs_entries_values_user_type">
        <item>student</item>
        <item>monitor</item>
        <item>teacher</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_advanced">Advanced</string>

    <string name="pref_title_enable_dev_server">Enable development server</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_enable_xdebug">Enable Xdebug</string>
    <string name="title_activity_write_post">WritePostActivity</string>

    <!-- Fetch/Input URL's -->
    <string name="fetch_hostname_prod" translatable="false">http://mathpp.smartcpc.kinghost.net</string>
    <string name="fetch_hostname_dev" translatable="false">https://mathpp.emilio.pedrollo.nom.br</string>
    <string name="fetch_hostname_debug" translatable="false">https://mathpp.emilio.pedrollo.nom.br/app_dev.php</string>

    <string name="categories_fetch_uri" translatable="false">/categories</string>
    <string name="category_fetch_uri" translatable="false">/category/%1$s</string>
    <string name="category_input_uri" translatable="false">/category</string>

    <string name="questions_fetch_uri" translatable="false">/questions</string>
    <string name="question_fetch_uri" translatable="false">/question/%1$s</string>
    <string name="question_input_uri" translatable="false">/question</string>

    <string name="answers_fetch_uri" translatable="false">/answers</string>
    <string name="answer_fetch_uri" translatable="false">/answer/%1$s</string>
    <string name="answer_input_uri" translatable="false">/answer</string>
    <string name="write_post_title_hint">Title</string>
    <string name="white_question_body_hint">Question</string>
    <string name="white_answer_body_hint">Answer</string>
    <string name="new_question">New Question</string>
    <string name="new_answer">New Answer</string>
    <string name="sending_post_dialog_message">Sending…</string>
    <string name="sending_question_dialog_title">Sending your question</string>
    <string name="sending_answer_dialog_title">Sending your answer</string>
    <string name="empty_question_title">Please enter question title…</string>
    <string name="empty_question_body">Please enter question…</string>
    <string name="empty_answer_title">Please enter answer title…</string>
    <string name="empty_answer_body">Please enter answer…</string>
    <string name="pref_key_enable_dev_server" translatable="false">advanced_enable_dev_server</string>
    <string name="report_issue">Report Issue</string>
    <string name="nav_my_questions">My Questions</string>
    <string name="pick_source">Choose a source</string>
    <string name="intent_select_image">Select an image file</string>
    <string name="delete_image">Delete Image</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="pref_key_enable_dev_server_xdebug" translatable="false">advanced_enable_dev_server_xdebug</string>
    <string name="error_while_posting_question">An error occurred while posting your question, please try again.</string>
    <string name="title_activity_welcome">WarmWelcome</string>
    <string name="welcome">Welcome</string>
    <string name="lets_start">Let\'s start</string>
    <string name="configure_new_user">Configure New User</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="your_name">Your name</string>
    <string name="role">Role</string>
    <string name="name">Name</string>
    <string name="let_us_know_how_we_should_call_you">Let us know how we should call you</string>
    <string name="user_setup">User setup</string>
    <string name="teacher">Teacher</string>
    <string name="monitor">Monitor</string>
    <string name="student">Student</string>
    <string name="prefs_key_display_name" translatable="false">display_name</string>
    <string name="prefs_key_user_email" translatable="false">user_email</string>
    <string name="prefs_key_user_category" translatable="false">user_category</string>
    <string name="question">Question</string>
    <string name="send">Send</string>

    <string-array name="image_sources">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

</resources>
