<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="example_switch"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/prefs_default_value_display_name"
        android:inputType="textCapWords"
        android:key="@string/prefs_key_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/prefs_default_value_email"
        android:inputType="textEmailAddress"
        android:key="@string/prefs_key_user_email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user_email" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="student"
        android:entries="@array/prefs_entries_user_type"
        android:entryValues="@array/prefs_entries_values_user_type"
        android:key="@string/prefs_key_user_category"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_user_type" />

</PreferenceScreen>
