<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_setup"
                android:id="@+id/textView4"
                android:textSize="34sp"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_us_know_how_we_should_call_you"
                android:id="@+id/textView5"
                android:textColor="@android:color/primary_text_light"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/primary_text_light" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_page2_name"
                android:hint="@string/your_name"
                android:inputType="textCapWords|textPersonName"
                android:textColor="@android:color/primary_text_light"
                android:textColorHint="@android:color/secondary_text_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/role"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/primary_text_light"
                android:id="@+id/textView" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                <RadioButton android:id="@+id/radio_student"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/student"
                             android:textColor="@android:color/primary_text_light"/>
                <RadioButton android:id="@+id/radio_monitor"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/monitor"
                             android:textColor="@android:color/primary_text_light"/>
                <RadioButton android:id="@+id/radio_teacher"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/teacher"
                             android:textColor="@android:color/primary_text_light"/>
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_page2_back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/back"
            android:textColor="@color/colorAccent" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_page2_next"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/finish"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>

</LinearLayout>