<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_refresh_categories"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_question"
        android:orderInCategory="100"
        android:title="@string/action_add_question"
        android:visible="false"
        android:icon="@drawable/ic_message_plus"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_questions_search"
        android:title="@string/action_search"
        android:orderInCategory="10"
        android:icon="@drawable/ic_magnify"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>
