<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/background_material_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome"
            android:text="@string/welcome"
            android:gravity="center"
            android:textSize="56sp"
            android:layout_marginBottom="8dp"
            android:textIsSelectable="true"
            android:textColor="@android:color/primary_text_light" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/lets_start"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            android:textIsSelectable="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_config_user"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/configure_new_user"/>

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>