<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.nom.pedrollo.emilio.mathpp.QuestionActivity"
    tools:showIn="@layout/activity_question">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/content_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="@dimen/activity_vertical_margin">

                    <LinearLayout
                        android:id="@+id/question_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:transitionName="question_header"
                        tools:targetApi="LOLLIPOP">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/question_author"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawablePadding="4dp"
                                android:drawableStart="@drawable/ic_account_outline"
                                android:drawableLeft="@drawable/ic_account_outline"
                                android:text="@string/user_asked"
                                android:textSize="14sp"
                                android:transitionName="question_author" />

                            <TextView
                                android:id="@+id/question_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="sans-serif"
                                android:gravity="start|center_vertical"
                                android:textColor="@android:color/secondary_text_light"
                                android:textSize="18sp"
                                android:transitionName="question_title"
                                tools:text="This is a test using a very long text so deal with it or else something will not work well" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:clipChildren="false"
                            android:gravity="center"
                            android:paddingEnd="16dp"
                            android:paddingStart="16dp">

                            <TextView
                                android:id="@+id/answer_item_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:alpha="0"
                                android:textSize="34sp"
                                android:transitionName="question_answer_number"
                                tools:text="2"
                                />

                            <ImageButton
                                android:id="@+id/question_star"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:background="?android:attr/selectableItemBackgroundBorderless"
                                android:contentDescription="@string/star"
                                android:src="@drawable/ic_star_border_black_36dp"
                                android:transitionName="question_star" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/question_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/question_header"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">


                        <!--<include layout="@layout/question_placeholder" />-->


                    </LinearLayout>

                </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/question_answers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/answer_item"/>

                <RelativeLayout
                    android:id="@+id/question_answers_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/question_answers_placeholder_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:layout_centerInParent="true"
                            android:text="@string/loading_answers" />
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>
